Cambios varios en el front

--- a/react-admin/public/manifest.json
+++ b/react-admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ambassador Admin",
+  "name": "Admin Panel - Products Ambassador",
   "icons": [
     {
       "src": "favicon.ico",
