--- a/react-ambassador/public/manifest.json
+++ b/react-ambassador/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ambassador",
+  "name": "Products Ambassador",
   "icons": [
     {
       "src": "favicon.ico",
